--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,45 @@
-accelerate==1.3.0
-datasets==3.2.0
-librosa==0.10.2.post1
-numpy==2.1.3
-pillow==11.1.0
-PyAudio==0.2.14
+# Core ML/AI Dependencies
+nemo_toolkit[asr]==2.2.1
+torch==2.6.0
+onnx==1.17.0
+transformers==4.48.3
+pytorch-lightning==2.5.1.post0
+cuda-python>=12.3
+
+# Audio Processing
+PyAudio==0.2.11
+webrtcvad-wheels==2.0.14
+soundfile==0.13.1
+pydub==0.25.1
+sox==1.5.0
+resampy==0.4.3
+# Note: libsora package removed - not available on PyPI
+
+# Screen/GUI Interaction
 PyAutoGUI==0.9.54
-PyGObject==3.50.0
 pynput==1.7.7
 pytesseract==0.3.13
+pillow==11.1.0
+python3-Xlib==0.15
+
+# CLI and Output
+prompt_toolkit==3.0.51
+# espeak and xclip are system packages, not pip packages
+
+# Core dependencies
+numpy==2.1.3
+sentencepiece==0.2.0
+protobuf==3.20.3
+accelerate==1.3.0
+datasets==3.2.0
 safetensors==0.5.2
 sounddevice==0.5.1
-soundfile==0.13.1
-torch==2.6.0
-transformers==4.48.3
-webrtcvad-wheels==2.0.14
-prompt_toolkit
-nemo_toolkit[asr]
+evdev==1.9.2
+pycairo==1.28.0
+texterrors==0.5.1
+kaldi-python-io==1.2.2
+wget==3.2
+
+# Additional dependencies that might be needed
+requests>=2.28.0
+aiohttp>=3.8.0
